Fix beer_caroussel styling on mobile (#72)
* Center the titles in sections

* Add padding to beer caroussel controls

* Fix mobile format for beer carousel

* Remove buttons when beers.count is equal to one

* Add the prev/next buttons to the desktop

* Put beer image up and description below on mobile

--- a/static/style/beer_carousel.scss
+++ b/static/style/beer_carousel.scss
@@ -9,6 +9,10 @@ section.beercarousel {
 
     .beercarousel {
 
+        &__container {
+            width: 100%;
+        }
+
         &__beers {
             display: flex;
             position: relative;
@@ -20,6 +24,11 @@ section.beercarousel {
                 width: 100vw;
                 justify-content: center;
                 position: relative;
+
+                @include breakpoint(phone) {
+                    align-items: center;
+                    flex-direction: column;
+                }
 
                 &__image {
                     width: 270px;
@@ -103,9 +112,7 @@ section.beercarousel {
                     transition-duration: $time-long;
 
                     @include breakpoint(phone) {
-                        position: absolute;
                         width: 100%;
-                        height: 100%;
                     }
                 }
 
@@ -116,13 +123,6 @@ section.beercarousel {
 
                 &__detail {
                     line-height: 1.5;
-
-                    span {
-                        @include breakpoint(phone) {
-                            background: $color-background;
-                            box-shadow: -3px 0 0 $color-background, 3px 0 0 $color-background;
-                        }
-                    }
 
                     &name {
                         font-weight: 700;
@@ -152,14 +152,6 @@ section.beercarousel {
                         }
                     }
                 }
-
-                // &:not(.beer--active) {
-                //     & .beer {
-                //         &__imagetag {
-                //             left: -600% !important;
-                //         }
-                //     }
-                // }
             }
         }
 
@@ -173,11 +165,15 @@ section.beercarousel {
             }
         }
 
-        &__mobilecontrols {
+        &__prevnextcontrols {
             display: none;
             justify-content: center;
 
             @include breakpoint(phone) {
+                display: flex;
+            }
+
+            &.show {
                 display: flex;
             }
         }
